[gd_scene load_steps=5 format=2]

[ext_resource path="res://guard.gd" type="Script" id=1]
[ext_resource path="res://Sprites/kings_guard.png" type="Texture" id=2]
[ext_resource path="res://Nodes/water_barrier.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.4702, 12.5946 )

[node name="guard" type="Area2D"]
script = ExtResource( 1 )

[node name="WaterBarrier" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_guard_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_guard_body_entered"]
[connection signal="init_barrier" from="." to="WaterBarrier" method="_on_guard_init_barrier"]
